--- a/Dokumentation/Enddokumentation/Tests/ZylinderTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/ZylinderTest.tex
@@ -1,1 +1,22 @@
 \subsection{Zylinder-Test}
+
+Typ:  Pneumatikzylinder \\
+Datum:  8.10.2014     \\
+Ort:  Bachmann Engineering AG (Zofingen)   \\
+Tester:  Gruppe 32     \\
+Ziel des Testes:   Das Ziel dieses Testes bestand darin, den gebauten Prototyp auf die 
+Wurfwiederholgenauigkeit zu testen. 
+Fazit/ 
+Verbesserungsvorschlag: 
+Ein Pneumatikzylinder arbeitet sehr zielgenau und schnell. 
+Zu verbessern: 
+Es wurde ein überdimensionierter Zylinder für die Testzwecke verwendet.  
+
+\rightarrow benötigte Abschussgeschwindigkeit mittels schiefer Wurf bestimmen. 
+Anschliessend mittels Stoss die benötigte Beschleunigung des Zylinders 
+bestimmen und im Anschluss den Zylinder gemäss ausgerechneten Daten 
+(Druckversorgung / Kolbendurchmesser / Drosselung) ausglegen. 
+
+Mit einem kleineren kann an Gewicht und Kosten gespart werden. Als 
+Ansteuerung reicht ein federrückgestelltes Magnetventil.  
+Ziel erreicht:   JA
