--- a/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
@@ -1,4 +1,4 @@
-\ifSTANDALONE
+﻿\ifSTANDALONE
 \section{Brushless Motoransteuerung}
 \fi
 \ifEMBED
@@ -46,17 +46,16 @@
       \fi
        \\
         Es gibt hauptsächlich drei Methoden das Drehfeld zu generieren und zu 
-        regeln. Die eine und einfache Methode ist die Zwangskommutierung. 
+        regeln. Die einfachste Methode ist die Zwangskommutierung. 
         Dabei wird ein Drehfeld erzeugt und dem Motor aufgezwungen. Der Läufer 
-        muss dem Drehfeld folgen können. Dabei ist ein maximaler Winkel 
+        muss dem Drehfeld folgen. Dabei ist ein maximaler Winkel 
         zwischen dem Feld und dem Läufer von 90$^\circ$ zulässig. Wird deser 
-        Winkel überschritten, wird der Motor zum Stillstand kommen mit den 
-        erwähnten Folgen.\\
+        Winkel überschritten, kommt der der Motor zum Stillstand.\\
         \\
         Die zweite Methode zur Regelung ist mittels drei Hallsensoren, die im 
         Motor integriert sind. Dies macht den Motor aufwändiger und 
         dementsprechend teurer. Die Regelung mit Hallsensoren ist 
-        verhältnismässig einfach, da je nach den Signalen die einzelnen Spulen 
+        verhältnismässig einfach, da nach den Signalen die einzelnen Spulen 
         direkt angesteuert werden können. Der Zusammenhang zwischen der 
         Ansteuerung und den Hall-Sensorsignalen ist in Abbildung 
         \ref{abb:ZeitlicheAnsteuerungBrushlessMotor} ersichtlich. Dabei stehen 
