et-gruppe diverse .tex überarbeitet

--- a/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Ansteuerung.tex
@@ -25,7 +25,7 @@
             \label{abb:ZeitlicheAnsteuerungBrushlessMotor}
         \end{wrapfigure}
     \fi
-        Brushless-Motoren sind Synchron-Drehstrom-Motoren. Das bedeutet, sie 
+        Brushless-Motoren (BLDC-Motoren) sind Synchron-Drehstrom-Motoren. Das bedeutet, sie 
         werden mittels eines kontinuierlichen magnetischen Drehfeldes in Bewegung gesetzt. 
         Dabei ist darauf zu achten, dass der Läufer dem Drehfeld synchron 
         folgen kann, daher auch die Namensbezeichnung des Motors. Falls der Läufer dem Drehfeld aus irgend 
@@ -89,7 +89,7 @@
         \fi
         In einem modifizierten Ansatz wird versucht, die Hallsensor-Signale 
         aus den Ansteuerungen des Motors zu gewinnen. Hierzu wird 
-        eine Schaltung[h!] pro Phase benötigt, um die Nulldurchgänge beim 
+        eine Schaltung pro Phase benötigt, um die Nulldurchgänge beim 
         virtuellen Sternpunkt detektieren zu können. Die Abbildung 
         \ref{abb:PrinzipRekonstruktion} zeigt die Schaltung, mit der dieser Ansatz 
         realisiert werden kann. 
