Revert "et-gruppe diverse .tex überarbeitet"
This reverts commit a83e3313f00ac42b28846245af0211b1d87828bb.

--- a/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
@@ -4,16 +4,16 @@
 \ifEMBED
 \subsection{Hardware}
 \fi
-Die Elektrotechnik-Studierende aus mehreren \enquote{PREN}-Gruppen haben sich
+Die Elektrotechnik-Studierenden aus mehreren Gruppen haben sich
 zusammengeschlossen um gemeinsame Probleme anzugehen. Dabei handelt es sich
-um die Ansteuerung, die benötigte Hard- und Software, die Ansteuerung und gegebenenfalls 
-die Regelung von Motoren. Aus diesem Zusammenschluss wurden drei Gruppen
+um die Ansteuerung, die benötigte Hard- und Software um Motoren anzusteuern
+und gegebenenfalls zu regeln. In diesem Zusammenschluss wurden drei Gruppen
 gebildet, um Lösungen für DC-, Stepper- und Brushless-Motoren auszuarbeiten.
 Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem
-denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert und
-Synergien genutzt werden, um eine bessere Lösung zu erarbeiten. \\
-Auf diese Weise kann das Team übergreifende Arbeiten im Rahmen des \enquote{PREN} erlernen und
-üben. Somit wird der Grundidee des \equote{PREN}-Moduls, der Interdisziplinarität, im erweiterten Sinn
+denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
+Synergien nutzt, um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
+das Team übergreifende Arbeiten im Rahmen des \enquote{PREN} erlernt und
+geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn
 Rechnung getragen. Die Gruppen und deren Mitglieder sind in der Tabelle 
 \ref{tab:pren-et-overview} aufgeführt.
 \begin{table}[h!]
