--- a/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
@@ -13,7 +13,7 @@ Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem
 denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert und
 Synergien genutzt werden, um eine bessere Lösung zu erarbeiten. \\
 Auf diese Weise kann das Team übergreifende Arbeiten im Rahmen des \enquote{PREN} erlernen und
-üben. Somit wird der Grundidee des \equote{PREN}-Moduls, der Interdisziplinarität, im erweiterten Sinn
+üben. Somit wird der Grundidee des \enquote{PREN}-Moduls, der Interdisziplinarität, im erweiterten Sinn
 Rechnung getragen. Die Gruppen und deren Mitglieder sind in der Tabelle 
 \ref{tab:pren-et-overview} aufgeführt.
 \begin{table}[h!]
