--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -8,10 +8,7 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 %		\label{fig:Geraeteuebersicht}
 %\end{figure}}\\
 \begin{figure}[h!]
-	\centering
-	\caption{Bezeichnung der Teilkomponenten}	
-	\label{tab:BezTeilkomponenten}
-	\begin{tabular}{|c|c|c|}
+	\begin{tabular}{|c|c|p{7.5cm}|}
 		\hline Pos & Bezeichnung & Funktion \\ 
 		\hline 1 & Startgerät (Smartphone) & Senden Startbefehls, Empfangen Endbefehl, Akustische,visuelle Signalausgabe
 		\\ 
@@ -27,5 +24,8 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 		\hline 7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
 		\hline 
 	\end{tabular} 
+	\centering
+	\caption{Bezeichnung der Teilkomponenten}	
+	\label{tab:BezTeilkomponenten}
 \end{figure}\\
 In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
