--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -16,9 +16,9 @@ Bei der Konstruktion wurde darauf geachtet, dass der Schwerpunkt der Masse sehr 
 
 	\begin{tabular}{|c|c|c|c|}
 		\hline Material & Dichte & Gewicht (550x120xT) & Re (Elastizitätsmodul) \\ 
-		\hline Holz 5mm & 0.8$\frac{g}{cm^3}g$ & 264g & 10 – 17$\frac{kN}{mm^2}g$ \\ 
-		\hline Aluminium 3mm & 2.71g/cm3 & 536g & 1000 $\frac{kN}{mm^2}g$ \\ 
-		\hline Acrylglas 5mm & 1.19g/cm3 & 393g & 3300 $\frac{N}{mm^2}g$  \\ 
+		\hline Holz 5mm & $0.8 \frac{g}{cm^3}$ & 264g & 10 – 17$\frac{kN}{mm^2}$ \\ 
+		\hline Aluminium $3 mm$ & $2.71 \frac{g}{cm^3}$ & $536 g$ & $1000 \frac{kN}{mm^2}$ \\ 
+		\hline Acrylglas $5 mm$ & $1.19 \frac{g}{cm^3}$ & $393 g$ & $3300 \frac{N}{mm^2}$  \\ 
 		\hline 
 	\end{tabular} 
 \end{table}
